<resources>
    <string name="app_name">TuTerapia</string>
    <string name="facebook_app_id">190437511367651</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <string name="title_activity_main">MainPatientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="logoutt">Cerrar sesión</string>
    <string name="facebookLogin">"INICIAR SESION CON FACEBOOK"</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">"Cancelar"</string>
    <string name="home_item">Home</string>
    <string name="telefonoHint">Telefono</string>
    <string name="paciente">Paciente</string>
    <string name="doctor">Doctor</string>
    <string name="add_patient">Desea agregar este paciente a tu lista?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="senderid">12123</string>
    <string name="no_doctor_message">No tienes un doctor asignado. \n Solicita a tu doctor que te agrege a su lista de pacientes. </string>
    <string name="solicitudes_pendientes">Tienes una solicitud pendiente</string>
    <string name="acept_doctor">Deseas aceptar la solicitud del doctor:</string>
    <string name="nombre_del_ejercicio">Nombre del ejercicio</string>
    <string name="parte">Parte</string>
    <string name="categoria">Categoria</string>
    <string name="equipamento">Equipamento</string>
    <string name="descripci_n">Descripción</string>
    <string name="unlink_patient">Desea desvincular al paciente</string>
    <string name="sesiones">Sesiones</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Comentarios">Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agrega_especificaciones_al_ejercicio">Agrega especificaciones al ejercicio</string>
    <string name="peso">Peso (Lbs)</string>
    <string name="indicaiones">Indicaciones y Recomendaciones</string>
    <string name="duracion">Duración (Segundos)</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="agregar">Agregar</string>
    <string name="siguiente">Siguiente</string>
    <string name="Ejercicios">Ejercicios</string>

</resources>
