<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miarodriguezfo.tuterapia.Select_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/agrega_especificaciones_al_ejercicio"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textStyle="normal|bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_repeticiones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="35dp"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/input_repeticiones"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/repeticiones"
                        android:inputType="number|numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="35dp"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/input_peso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/peso"
                        android:inputType="number|numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="35dp"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/input_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/duracion"
                        android:inputType="number|numberDecimal"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_indicaciones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="35dp"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/input_indicaciones"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="10"
                        android:hint="@string/indicaiones"
                        android:inputType="text|textMultiLine"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/agregar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/siguiente"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
