<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <!-- Imagen de perfil -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_profile_signup"
            android:layout_width="@dimen/perfil_image_size"
            android:layout_height="@dimen/perfil_image_size"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            app:border_color="@android:color/white"
            app:border_width="1dp" />


        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:id="@+id/nombre"
            android:textColor="@color/primaryText" />

        <TextView
            android:text="Información Personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/textView"
            android:textColor="@color/secondaryText" />

        <EditText
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_email"
            android:textSize="18dp"
            android:enabled="false"
            android:id="@+id/correo"
            android:textColor="@color/primaryText" />
        <EditText
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_phone"
            android:textSize="18dp"
            android:hint="@string/telefonoHint"
            android:id="@+id/telefono"
            android:inputType="number"
            android:textColor="@color/primaryText" />
        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">

            <RadioButton
                android:id="@+id/paciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/paciente"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor"
                android:textSize="15dp"
                style="@style/RadioButton" />
        </info.hoang8f.android.segmented.SegmentedGroup>
    </LinearLayout>
</RelativeLayout>
